--- a/BobRoss.css
+++ b/BobRoss.css
@@ -1,3 +1,8 @@
+body {
+    background-image: url("art-background.jpg");
+    background-size: 100%;
+}
+
 #header {
     border: solid 2px black;
     width: 60%;
