--- a/BobRoss.css
+++ b/BobRoss.css
@@ -3,7 +3,16 @@
     width: 60%;
     margin: auto;
     display: flex;
+    justify-content: space-around;
+    height: 40px;
+    padding: 20px;
+    background-color: rgba(255, 228, 196, 0.397);
     
+}
+
+.button {
+    width: 40px;
+    height: 40px;
 }
 
 #red {
@@ -16,6 +25,14 @@
 
 #green {
     background: green;
+}
+
+#square-parent {
+    width: 60%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .square-row {
